v5.2.0/_sources/generated/pcdsdevices.lasers.btps.GlobalConfig.rst.txt
pcdsdevices.lasers.btps.GlobalConfig
====================================

.. currentmodule:: pcdsdevices.lasers.btps

.. autoclass:: GlobalConfig

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - max_frame_time
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``MaxFrameTime``
          - Maximum time between frame updates in seconds to be considered 'valid' data
          - normal
          - 
    
        * - min_centroid_change
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``MinCentroidChange``
          - Minimal change (in pixels) for centroid values to be considered valid
          - normal
          - 
    

    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: get
    .. automethod:: post_elog_status
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: hints
    .. autoattribute:: kind
    
    